plugins {
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
	id 'java'
}

group = 'com.bots'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	// Persistence
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.h2database:h2:2.1.214'
	// Used for property encryption
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot:3.0.4'
	// Discord wrapper
	implementation 'net.dv8tion:JDA:5.0.0-alpha.17'
	// JSON parsing
	implementation 'org.json:json:20220320'
	// Server and client shared code
	implementation files("./libs/RacoonShared.jar")

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
